--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.16.4",
     "nuxt": "^2.0.0",
     "prettier": "^1.18.2",
+    "vee-validate": "^2.2.13",
     "vue": "^2.6.10",
     "vuetify": "^2.0.2",
     "vuetify-loader": "^1.3.0"
