--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/pwa": "^2.6.0",
     "@nuxtjs/vuetify": "^1.0.1",
+    "aos": "^2.3.4",
     "cross-env": "^5.2.0",
     "eslint": "^6.1.0",
     "express": "^4.16.4",
