--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "prettier": "^1.18.2",
     "vee-validate": "^2.2.13",
     "vue": "^2.6.10",
+    "vue2-animate": "^2.1.0",
     "vuetify": "^2.0.2",
     "vuetify-loader": "^1.3.0"
   },
