--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "prettier": "^1.18.2",
     "vee-validate": "^2.2.13",
     "vue": "^2.6.10",
+    "vue-image-lightbox": "^6.3.1",
+    "vue-lazyload": "^1.3.1",
+    "vue-touch": "^1.1.0",
     "vue2-animate": "^2.1.0",
     "vuetify": "^2.0.2",
     "vuetify-loader": "^1.3.0"
