--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "vee-validate": "^2.2.13",
     "vue": "^2.6.10",
     "vue-lazyload": "^1.3.1",
+    "vue-owl-carousel": "^2.0.3",
     "vue2-animate": "^2.1.0",
+    "vue2-siema": "^0.2.2",
     "vuetify": "^2.0.2",
     "vuetify-loader": "^1.3.0"
   },
