--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "cj",
+  "name": "SilenceKillsDesign",
   "version": "1.0.0",
-  "description": "My riveting Nuxt.js project",
+  "description": "SilenceKillsDesign - Development, Design, Marketing, SEO",
   "author": "CJ Williams",
   "private": true,
   "scripts": {
