--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@neneos/nuxt-animate.css": "0.0.1",
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/pwa": "^2.6.0",
+    "@nuxtjs/sitemap": "^1.3.0",
     "@nuxtjs/vuetify": "^1.0.1",
     "aos": "^2.3.4",
     "cross-env": "^5.2.0",
