--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/google-analytics": "^2.2.0",
     "@nuxtjs/pwa": "^2.6.0",
+    "@nuxtjs/robots": "^2.4.0",
     "@nuxtjs/sitemap": "^1.3.0",
     "@nuxtjs/vuetify": "^1.0.1",
     "aos": "^2.3.4",
