--- a/package.json
+++ b/package.json
@@ -22,13 +22,14 @@
     "cross-env": "^5.2.0",
     "eslint": "^6.1.0",
     "express": "^4.16.4",
-    "nuxt": "^2.8.1",
+    "nuxt": "^2.9.1",
     "prerender-spa-plugin": "^3.4.0",
     "prettier": "^1.18.2",
     "vee-validate": "^2.2.13",
     "vue": "^2.6.10",
     "vue-lazyload": "^1.3.1",
     "vue-owl-carousel": "^2.0.3",
+    "vue-template-compiler": "^2.6.10",
     "vue2-animate": "^2.1.0",
     "vue2-siema": "^0.2.2",
     "vuetify": "^2.0.2",
