--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@bazzite/nuxt-optimized-images": "^0.2.1",
     "@neneos/nuxt-animate.css": "0.0.1",
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/google-analytics": "^2.2.0",
@@ -22,6 +23,9 @@
     "cross-env": "^5.2.0",
     "eslint": "^6.1.0",
     "express": "^4.16.4",
+    "imagemin-mozjpeg": "^8.0.0",
+    "imagemin-pngquant": "^8.0.0",
+    "imagemin-svgo": "^7.0.0",
     "nuxt": "^2.9.1",
     "prerender-spa-plugin": "^3.4.0",
     "prettier": "^1.18.2",
