--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "nuxt": "^2.9.1",
     "prerender-spa-plugin": "^3.4.0",
     "prettier": "^1.18.2",
+    "prismic-dom": "^2.1.0",
+    "prismic-javascript": "^2.1.1",
     "vee-validate": "^2.2.13",
     "vue": "^2.6.10",
     "vue-lazyload": "^1.3.1",
