--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@neneos/nuxt-animate.css": "0.0.1",
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/google-analytics": "^2.2.0",
+    "@nuxtjs/google-gtag": "^1.0.4",
     "@nuxtjs/pwa": "^2.6.0",
     "@nuxtjs/redirect-module": "^0.3.1",
     "@nuxtjs/robots": "^2.4.0",
