--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/google-analytics": "^2.2.0",
     "@nuxtjs/google-gtag": "^1.0.4",
+    "@nuxtjs/google-tag-manager": "^2.2.1",
     "@nuxtjs/pwa": "^2.6.0",
     "@nuxtjs/redirect-module": "^0.3.1",
     "@nuxtjs/robots": "^2.4.0",
