--- a/package.json
+++ b/package.json
@@ -46,7 +46,9 @@
     "vuetify-loader": "^1.3.0"
   },
   "devDependencies": {
+    "glob-all": "^3.1.0",
     "nodemon": "^1.18.9",
+    "purgecss-webpack-plugin": "^1.6.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "webpack": "^4.39.3",
