--- a/package.json
+++ b/package.json
@@ -46,6 +46,9 @@
     "vuetify-loader": "^1.4.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.18.6",
+    "@babel/preset-env": "^7.18.6",
+    "babel-loader": "^8.2.5",
     "glob-all": "^3.1.0",
     "nodemon": "^1.19.4",
     "purgecss-webpack-plugin": "^1.6.0",
